k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farm-inventory
  namespace: farm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: farm-inventory
  template:
    metadata:
      labels:
        app: farm-inventory
    spec:
      containers:
        - name: farm-inventory
          image: arjunmj/farm-inventory:latest
          imagePullPolicy: Always

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          
          
          ports:
            - containerPort: 8000
