k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: farm-inventory-service
  namespace: farm
spec:
  selector:
    app: farm-inventory
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
  type: NodePort
